<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_shade"
    tools:context=".MainActivity" >

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/loadingBar"
        android:layout_centerInParent="true"
        android:visibility="visible"/>

    <RelativeLayout
        android:id="@+id/homeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <ImageView
            android:id="@+id/backround"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@color/black_shade"
            android:contentDescription="@string/desc_background" />

        <TextView
            android:id="@+id/cityName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="38dp"
            android:padding="20dp"
            android:text="@string/city_name"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <LinearLayout
            android:id="@+id/linearFirst"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cityName"
            android:orientation="horizontal"
            android:weightSum="5">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/cityInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="4.5"
                android:background="@android:color/transparent"
                android:hint="@string/city_hint"
                android:padding="5dp"
                android:textColorHint="@color/white"
                app:hintTextColor="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/cityInput"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/searchCity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_weight="0.5"
                android:background="@android:color/transparent"
                android:src="@drawable/search_icon"
                app:tint="@color/white"
                android:contentDescription="@string/desc_search" />
        </LinearLayout>

        <TextView
            android:id="@+id/textTemperature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linearFirst"
            android:layout_margin="10dp"
            android:gravity="center_horizontal"
            android:padding="5dp"
            android:text="@string/temperature"
            android:textColor="@color/white"
            android:textSize="70sp" />

        <ImageView
            android:id="@+id/weatherIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textTemperature"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp"
            android:minHeight="90dp"
            android:minWidth="90dp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_launcher_background"
            android:contentDescription="@string/condition" />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/weatherIcon"
            android:orientation="horizontal"
            android:gravity="center">
            <TextView
                android:id="@+id/weatherCondition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/condition"
                android:textColor="@color/white" />
            <ImageView
                android:id="@+id/info_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/info_icon"
                android:background="@android:color/transparent"
                app:tint="@color/white"
                android:contentDescription="@string/desc_info" />
        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/forecastView"
            android:layout_margin="8dp"
            android:layout_marginBottom="10dp"
            android:text="@string/forecast"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/forecastView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

    </RelativeLayout>
</RelativeLayout>